Fix some text that poured out of containers on mobile

--- a/styles/home-styles.css
+++ b/styles/home-styles.css
@@ -606,7 +606,7 @@ body::-webkit-scrollbar-thumb:hover {
     
     #inner-title-container {
         width: calc(var(--numberQ-width) * 1.3);
-        height: calc(var(--numberQ-width) * 0.24 * 1.4);
+        height: calc(var(--numberQ-width) * 0.24 * 1.54);
         border-radius: calc(0.05 * var(--numberQ-width) * 0.3);
     }
     
@@ -652,16 +652,7 @@ body::-webkit-scrollbar-thumb:hover {
         font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
         color: #0f0a0a;
     }
-    
-    .example-problem {
-        font-size: 2.8vw;
-        color: whitesmoke;
-    }
-    
-    .shrunk-question {
-        font-size: 1.9vw;
-    }
-    
+
     .start-button {
         width: 24vw;
         height: 6.7vw;
@@ -698,6 +689,10 @@ body::-webkit-scrollbar-thumb:hover {
     
     .shrunk-question {
         font-size: 6.5vw;
+    }
+
+    #lin-eq-example-problem {
+        font-size: 7vw;
     }
 
     #coming-soon-gen {
@@ -932,6 +927,10 @@ body::-webkit-scrollbar-thumb:hover {
     .FAQ-answer {
         margin-bottom: 5vw;
         font-size: 4.2vw;
+    }
+
+    #rendered-Q[data-special-styles='genLinEq'] {
+        font-size: 5.75vw;
     }
 
     #un-rendered-Q[data-special-styles='genMulDiv'] {
